# sp

./: CMakeLists.txt  Doxyfile  LICENSE.txt  TODO  footer.html
cmake/: CheckedAddSubdir.cmake
examples/: sbarvortex.txt
scilab/: sp.sce
scripts/: anim.sh  label_contours.awk
src/: CMakeLists.txt  baroclin.cpp  baroclin.h  barvortex.cpp  barvortex.h  chafe.cpp  chafe.h  div.cpp  div.h  generator.cpp  generator.h  generator.ypp  generator_expression.cpp  generator_harmonic.cpp  generator_harmonic.h  generator_header.cpp  generator_main.cpp  generator_parser.ypp  generator_scanner.l  grad.cpp  grad.h  helm.c  helm.cpp  jac.cpp  jac.h  lapl.cpp  lapl.h  norm.cpp  norm.h  operator.cpp  operator.h  srtm_rel.cpp  statistics.h  test_baroclin.cpp  test_barvortex.cpp  test_chafe.cpp  test_forcing.cpp  test_jac.cpp  test_lapl.cpp  test_op.cpp  (+4 more)
utils/: CMakeLists.txt  sp_srtm_rel.cpp  sp_srtm_rel.h
